# Docker-compose-template

./: .dockerignore  .env.dev  .env.dev.example  .env.example  .env.prod  .env.prod.example  .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml
docker/: .env.example  Dockerfile  docker-compose.base.yml  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml
docker/compose/: docker-compose.core.yml
docker/compose/base/: networks.yml  resources.yml  secrets.yml  security.yml  volumes.yml
docker/compose/services/: app.yml  db.yml  pgadmin.yml  profiles.yml
docker/secrets/: db_password.example.txt  pgadmin_password.example.txt
envs/: .env.dev.example  .env.dist  .env.local.example  .env.prod.example  .env.test.example
mks/: app.mk  core.mk  docker.mk  env.mk  secrets.mk
scripts/: entrypoint.app.sh  optimize-resources.sh  setup.sh
src/: main.py
src/application/: __init__.py  app.py  heartbeat.py
src/config/: __init__.py  base.py  database.py  security.py
src/database/: __init__.py  connection.py  manager.py  schema.py
